removed hover effect on image account in navbar and fixed the alignement in my collab

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -176,7 +176,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  min-width: 300px;
+  width: 300px;
 
   .btn-reject {
     width: 55%;
