--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -223,7 +223,7 @@
 
     h3 {
       margin-bottom: 0;
-      min-width: 200px;
+      width: 200px;
 
       a {
         color: inherit;
@@ -233,7 +233,7 @@
 
     h4 {
       margin-bottom: 0;
-      min-width: 300px;
+      width: 250px;
 
       a {
         color: inherit;
@@ -243,7 +243,7 @@
 
     p {
       margin-bottom: 0;
-      min-width: 200px;
+      width: 200px;
       text-align: center;
       padding-left: 50px;
 
